[PURR][#1464][COM_DATAVIEWER] Added some css to keep fixed width columns from overflowing

--- a/core/components/com_dataviewer/site/html/spreadsheet.css
+++ b/core/components/com_dataviewer/site/html/spreadsheet.css
@@ -278,6 +278,11 @@ table#dv-spreadsheet-tbl {
 	max-width: none !important;
 }
 
+td>p[style*='width: '] {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
 
 /* Floating dataview controls */
 div#dv-spreadsheet-tbl_filter, div#dv-spreadsheet-tbl_info, #dv-spreadsheet-tbl_wrapper .dataTables_paginate {
